--- a/frontend/src/components/global-styles/article.css
+++ b/frontend/src/components/global-styles/article.css
@@ -21,7 +21,7 @@
 
     & p,
     & li {
-      line-height: 1.7;
+      line-height: 1.75;
     }
 
     & p {
