--- a/frontend/src/components/retro-formats/mood/MoodRetro.css
+++ b/frontend/src/components/retro-formats/mood/MoodRetro.css
@@ -99,7 +99,7 @@
 
   .tab-item {
     font-size: 0.9em;
-    line-height: 18px;
+    line-height: 1.125rem;
     padding: 12px 4px;
     font-weight: bolder;
     text-align: center;
